Wrong value for key property in keydown and keyup events generated holding Control key https://bugs.webkit.org/show_bug.cgi?id=192788 <rdar://problem/46795214>

Reviewed by Wenson Hsieh.

Similar to what we do on Mac, compute the DOM key property from the characters ignoring
modifier keys input string when the Control key is held down.

* platform/ios/PlatformEventFactoryIOS.mm:
(WebCore::keyForKeyEvent):
* platform/mac/PlatformEventFactoryMac.mm:
(WebCore::keyForKeyEvent):

Canonical link: https://commits.webkit.org/207408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239361 268f45cc-cd09-0410-ab3c-d52691b4dbfc